edpdgen_lib/src/input_parsers/snapshots/edpdgen_lib__input_parsers__dpd__tests__word_data_tests___4.snap
---
source: edpdgen_lib/src/input_parsers/dpd.rs
expression: word_data

---
  <hr />

  <div>
    <h4 id="abahulīkata_dpd">abahulīkata</h4>
    <table class="word-info-table-dpd">
      <tbody><tr><td>Pāli</td><td><span>abahulīkata</span></td></tr><tr><td>Grammar</td><td><span>adj, pp of bahulīkaroti, comp vb, neg</span></td></tr><tr><td>English</td><td><span><strong>not practised often, not fully developed, not cultivated, not increased</strong></span></td></tr><tr><td></td><td><span>lit. LM5</span></td></tr><tr><td>Family</td><td><span>bahula</span></td></tr><tr><td>Construction</td><td><span>na + bahula + kata</span></td></tr><tr><td>Compound</td><td><span>kammadhāraya (na + bahulīkata)</span></td></tr><tr><td>Antonym</td><td><span>bahulīkata</span></td></tr><tr><td>Sanskrit</td><td><span><i>abahulīkṛta</i></span></td></tr><tr><td>Notes</td><td><span>a > ī before √kar</span></td></tr></tbody>
    </table>
    <br /><span>evam'eva kho, bhikkhave, yassa kassaci bhikkhuno kāyagatāsati abhāvitā <b>abahulīkatā</b>, taṃ cakkhu āviñchati manāpiyesu rūpesu, amanāpiyā rūpā paṭikūlā honti</span><br /><span class="sutta-source-dpd"><i>SN 35.247 chappāṇakasuttaṃ</i></span><br /><br /><span>evam'eva kho, bhikkhave, yassa kassaci bhikkhuno mettācetovimutti abhāvitā <b>abahulīkatā</b> so suppadhaṃsiyo hoti amanussehi.</span><br /><span class="sutta-source-dpd"><i>SN 20.3 kulasuttaṃ</i></span><br /><br /></div>

<div>
[ITABLE: abahulīkata]
</div>
<br/>
<a class="dictionary-feedback-link-dpd" href="fb_url?entry.267696921=host url&entry.1433863141=host version" target="_blank">spot a mistake in the dictionary? fix it here!</a>
<br />
<a href="#abahulīkata_dpd">&#x25B2; back to top</a>
