edpdgen_lib/src/input_parsers/snapshots/edpdgen_lib__input_parsers__dpd__tests__word_data_tests___7.snap
---
source: edpdgen_lib/src/input_parsers/dpd.rs
expression: word_data

---
  <hr />

  <div>
    <h4 id="abalabala_dpd">abalabala</h4>
    <table class="word-info-table-dpd">
      <tbody><tr><td>Pāli</td><td><span>abalabala</span></td></tr><tr><td>Grammar</td><td><span>adj, comp</span></td></tr><tr><td>English</td><td><span><strong>weak and strong</strong></span></td></tr><tr><td></td><td><span>lit. LM8</span></td></tr><tr><td>Family</td><td><span>√bala</span></td></tr><tr><td>Root</td><td><span>√bal<sup>×</sup>1.1 a (to be strong, live)&nbsp;RiC8&nbsp;in comps</span></td></tr><tr><td>Construction</td><td><span>abala + bala</span></td></tr><tr><td>Compound</td><td><span>dvanda (abala <b>ca </b>bala <b>ca</b>)</span></td></tr><tr><td>Sanskrit</td><td><span><i>abala + bala</i></span></td></tr><tr><td>Sanskrit Root</td><td><span><i>√bal</i></span></td></tr></tbody>
    </table>
    <br /><span>nivatth'avatthen'eva "gehato" nikkhamitvā paramasallekhavuttiko'pi <b>abalabalo</b> amandamando viya paresaṃ acittakarūpena hīḷitaparibhūto hutvā gāmanigamarājadhānīsu ekarattivāsen'eva vicarati.</span><br /><span class="sutta-source-dpd"><i>CPa 3.15 mahālomahaṃsacariyāvaṇṇanā</i></span><br /><br /></div>

<div>
[ITABLE: abalabala]
</div>
<br/>
<a class="dictionary-feedback-link-dpd" href="fb_url?entry.267696921=host url&entry.1433863141=host version" target="_blank">spot a mistake in the dictionary? fix it here!</a>
<br />
<a href="#abalabala_dpd">&#x25B2; back to top</a>
