edpdgen_lib/src/input_parsers/snapshots/edpdgen_lib__input_parsers__dpd__tests__word_data_tests___8.snap
---
source: edpdgen_lib/src/input_parsers/dpd.rs
expression: word_data

---
  <hr />
  <div>
    <h4 id="ābandhaka_dpd">ābandhaka</h4>
    <table class="word-info-table-dpd">
      <tbody><tr><td>Pāli</td><td><span>ābandhaka</span></td></tr><tr><td>Grammar</td><td><span>adj</span></td></tr><tr><td></td><td><span>lit. LM9</span></td></tr><tr><td>Family</td><td><span>ā √bandh</span></td></tr><tr><td>Root</td><td><span>√bandh<sup>･</sup>1.1 a (to bind, tie)&nbsp;RiC9&nbsp;in comps</span></td></tr><tr><td>Base</td><td><span>√bandh + a > bandha</span></td></tr><tr><td>Construction</td><td><span>ā + bandha + ka</span></td></tr><tr><td>Sanskrit Root</td><td><span>√bandh</span></td></tr></tbody>
    </table>
    <br /></div>
<br/>
<div>
[ITABLE: ābandhaka]
</div>
<br/>
<a class="dictionary-feedback-link-dpd" href="fb_url?entry.267696921=host url&entry.1433863141=host version" target="_blank">spot a mistake in the dictionary? fix it here!</a>

